contact email and phone number formate change

--- a/services.html
+++ b/services.html
@@ -55,9 +55,9 @@
 
             <div class="col-sm-12 col-md-8">
                 <ul class="top-contact pull-right">
-                    <li class="phone"><i class="fa fa-phone-square" aria-hidden="true"></i>09550094855</li>
+                    <li class="phone"><i class="fa fa-phone-square" aria-hidden="true"></i>+91 95 5009-4855</li>
                     <li class="email"><i class="fa fa-envelope" aria-hidden="true"></i>
-                    info@aroundng.com
+                    contact@aroundng.com
                     </li>
                     <li class="get-a-quote"><a href="contact.html" title="">Get a Quote</a></li>
                 </ul>
@@ -307,7 +307,7 @@
                       <p style="text-align">NodeGraph India is a emerging leader that provides information technology solutions that drive productivity and quality across multiple industrial landscapes.</p>
 
                       <ul>
-                          <li class="phone"><i class="fa fa-volume-control-phone" aria-hidden="true"></i> 09550094855
+                          <li class="phone"><i class="fa fa-volume-control-phone" aria-hidden="true"></i> +91 95 5009-4855
                           <small><i class="fa fa-clock-o" aria-hidden="true"></i> Mon - Sat 10.00 A.M - 07.00 P.M</small></li>
                           <li class="address">
                           <address>
