--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
 
             <div class="col-sm-12 col-md-8">
                 <ul class="top-contact pull-right">
-                    <li class="phone"><i class="fa fa-phone-square" aria-hidden="true"></i>09550094855</li>
+                    <li class="phone"><i class="fa fa-phone-square" aria-hidden="true"></i>+91 95 5009-4855</li>
                     <li class="email"><i class="fa fa-envelope" aria-hidden="true"></i>
-                    info@aroundng.com
+                    contact@aroundng.com
                     </li>
                     <li class="get-a-quote"><a href="contact.html" title="">Get a Quote</a></li>
                 </ul>
@@ -152,7 +152,7 @@
                         <div class="promo-content">
                           <h3></h3>
                           <address>
-                            <abbr title="Phone">Contact:</abbr>09550094855<br>
+                            <abbr title="Phone">Contact:</abbr>+91 95 5009-4855<br>
                           </address>
                         </div>
                       </div><!-- /.promo-block-wrapper -->
@@ -166,7 +166,7 @@
                         <div class="promo-content">
                           <h3></h3>
                           <address>
-                            <a href="mailto:#">info@aroundng.com</a><br>
+                            <a href="mailto:#">contact@aroundng.com</a><br>
                             <a href="https://www.aroundng.com">www.aroundng.com</a>
                           </address>
                         </div>
@@ -213,7 +213,7 @@
                         </div> <!-- col-md-8 -->
                       </div><!-- /.row-->
 
-                      <button type="submit" action="mailto:info@aroundng.com" class="btn btn-primary btn-lg pull-right">Send Message</button>
+                      <button type="submit" action="mailto:contact@aroundng.com" class="btn btn-primary btn-lg pull-right">Send Message</button>
                     </form>
                   </div> <!-- contact-form -->
                 </div>
@@ -234,7 +234,7 @@
                       <p style="text-align">NodeGraph India is a emerging leader that provides information technology solutions that drive productivity and quality across multiple industrial landscapes.</p>
 
                       <ul>
-                          <li class="phone"><i class="fa fa-volume-control-phone" aria-hidden="true"></i>  09550094855
+                          <li class="phone"><i class="fa fa-volume-control-phone" aria-hidden="true"></i>  +91 95 5009-4855
                           <small><i class="fa fa-clock-o" aria-hidden="true"></i> Mon - Sat 10.00 A.M - 07.00 P.M </small></li>
                           <li class="address">
                           <address>
