--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                             <li><a href="logistics.html">Logistics</a></li>
                             <li><a href="automobile.html">Automobile</a></li>
                             <li><a href="foods.html">Foods & Beverages</a></li>
+			    <li><a href="http://www.org.aroundng.com/">welfare organization</a></li>
                     </ul>
                 </li>
 
